FireFox/Safari/Chrome/Opera will work fine as for HTML5 supported version.
It's hard to check all versions above browsers as you know. I hope you understand.

=================================
Change Log
=================================

Latest changes might exist on the GitHub repository. Please check https://github.com/msyk/INTER-Mediator.

Ver.4.3 (in development)
- Validation doesn't call the eval function, but it changes to evaluate the expression to validate.
- The 'validation' in a context can set the 'notify' parameter. Its value can be 'alert', 'inline' and 'end-of-sibling'.
- The DataConverter_NullZeroString class added. This is for numeric field that the blank is treated as NULL.
- TinyMCE Ver.4.0.19 supported.
- "new Function()" statements have gone away. Moreover no eval function so far.
- The length function which returns the length of string added to the expression.
- [BUG FIX] In case of a validation didn't meet, all calculation fields updated.
- [BUG FIX] Parser recognized some operators as a part of variables.
- [BUG FIX] The sum function couldn't aggregate formatted values.
- [BUG FIX] Formatter classes didn't work in the updating task in PDO.
- [BUG FIX] JSON supported communication branch wasn't merged.

Ver.4.2 (2014/3/13)
- Calculation Field started to work. See the 'Sample_invoice'.
- Send emails after the load/edit/new database operations.
- Installation procedure is changed. We recommend to clone the repository and use the 'buildup.sh' script.
- INTERMediatorOnPage.processingAfterPostOnlyContext has TWO parameters.
- DataConverter_HTMLString supports double and single quote to convert to reference character.
- DataConverter_HTMLString supports disabling HTML escaping (by specifying 'parameter' => 'noescape' ).
- When the 'transaction' set to 'none', the update processing improved and update once for single record.
- New sample "Asset Management Sample" is added.