@@ -153,6 +153,15 @@
         <td></td>
         <td></td>
     </tr>
+    <tr>
+        <td>Practices</td>
+        <td>
+            <a href="Practices/search_page.html">search</a>
+        </td>
+        <td></td>
+        <td></td>
+        <td></td>
+    </tr>
 </table>
 
 <h2>Demo Script</h2>
